Added capability to test PDF files using Applitools Visual AI (#883)
* added new platform - PDF

* updated PublicMethods test

* updated jsonDiffVersion

* renamed teswiz_APPLITOOLS_API_KEY to TESWIZ_APPLITOOLS_API_KEY

* added pdf test with android

* upgraded to ATD 14.0.4
Initialize hooks for a scenario only once
Updated log messages and tests

* in Hooks - afterScenario, reset HOOKS_INITIALIZED to prevent duplicate cleanup logic

* reformat AppiumDriverManager

* reformat CucumberPlatformScenarioListener

* reformatted Driver and Drivers

* quit the appiumdriver at the end of the test

* updated axios package